<resources>
    <string name="app_name" translatable="false">Pufas 2.0</string>

    <string name="back">Back</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="exit">Exit?</string>
    <string name="filter">Filter…</string>
    <string name="copied_to_clipboard">Copied to clipboard</string>

    <string name="open_file">Open file</string>
    <string name="import_data_canceled">Import data canceled</string>

    <string name="open_from_url">Open from url</string>
    <string name="invalid_url">Invalid url</string>
    <string name="enter_url">Enter url</string>

    <!--  Drag and Drop  -->
    <string name="drop_json_file_here">Drop JSON file here</string>
    <string name="this_is_not_json_file">This is not JSON file</string>
    <string name="only_one_file_is_allowed">Only one file is allowed!</string>

    <!--  About Page  -->
    <string name="about">About</string>
    <string name="name">Name</string>
    <string name="version">Version</string>
    <string name="open_source_libraries">Open source libraries</string>
    <string name="check_for_update">Check for update</string>

    <!--  Sending Feedback  -->
    <string name="send_feedback">Send Feedback</string>
    <string name="include_info">Include info?</string>
    <string name="include_info_description">Do you want to include app and device info?</string>

    <!--  Settings Page -->
    <string name="settings">Settings</string>
    <string name="disable_MIME">Disable MIME filter</string>
    <string name="disable_MIME_description">If you have a problem with opening json files or the file is not with .json extension, disable the MIME filter</string>
    <string name="SHighlighting">Syntax Highlighting</string>
    <string name="SHighlighting_description">Syntax Highlighting for the raw JSON text</string>
    <string name="checking_for_update">Enable checking for update</string>
    <string name="beta" translatable="false">Beta</string>

    <!--  Crash logs Page -->
    <string name="crash_logs" translatable="false">Crash logs</string>
    <string name="list_is_empty">List is empty</string>
    <string name="file_is_empty">File is empty</string>
    <string name="copy_logs_to_clipboard">Copy logs to clipboard</string>
    <string name="share_logs">Share logs</string>
    <string name="chose_action">Chose action</string>
    <string name="warning">Warning!</string>
    <string name="reports_may_include_personal_info">This reports may include personal information. Check before sharing to anyone</string>
    <string name="logs_copied_to_clipboard">logs is copied to clipboard</string>
    <string name="delete_logs">Delete logs?</string>


    <!--  loading animation  -->
    <string name="loading_data_from_file">loading data from file</string>
    <string name="loading">loading…</string>
    <string name="loading_json">loading json</string>
    <string name="creating_list">creating list</string>
    <string name="displaying_json">Displaying json…</string>
    <string name="reading_file">Reading file</string>
    <string name="finished">finished</string>
    <string name="importing_database">Importing database…</string>


    <string name="fail_to_load_data">Fail to load data</string>
    <string name="file_is_too_large">File is too large</string>
    <string name="fail_to_load_file">Fail to load file!</string>
    <string name="incorrect_database_structure">Incorrect database structure</string>
    <string name="fail_to_create_list">Fail to create list!</string>
    <string name="loading_file_in_progress">Loading file in progress, try again later</string>
    <string name="file_is_to_large_to_be_shown_in_a_split_screen">File is to large to be shown in a split screen!</string>

    <string name="item_name">Item key</string>
    <string name="item_value">Item value</string>

    <!--  Save Changes  -->
    <string name="save">Save</string>
    <string name="dismiss">Dismiss</string>
    <string name="unsaved_changes_msg">You have unsaved changes</string>
    <string name="save_changes">Save changes?</string>
    <string name="file_saved">File saved!</string>
    <string name="fail_to_save">Fail to save a file</string>
    <string name="saving_file">Saving file...</string>
    <string name="db_saved">Database saved!</string>

    <!--  Release Notes  -->
    <string name="release_notes">Release Notes</string>
    <string name="fail_to_get_data">Fail to get data</string>
  
    <!--  Search  -->
    <string name="search">search</string>
  
    <!-- Editing -->
    <string name="editing_in_progress">Editing in progress</string>
    <string name="item_with_name_already_exists">Item with this name already exists!</string>
    <string name="edit_item">Edit Item</string>
    <string name="editing_root_item_not_available">Editing a root item is not available!</string>
    <string name="rename_all">Rename all</string>
    <string name="rename_all_s_key_with_s">Rename all \'%s\' key with \'%s\'?</string>
    

    <!--  Themes  -->
    <string name="theme">Theme</string>
    <string name="import_db">Import</string>
    <string name="import_database">Import database</string>
    <string name="no_data" translatable="false">-</string>
    <string name="Product">Product</string>
    <string name="color">Color</string>
    <string name="color_name">There will be a selected color here</string>
    <string name="color_name_description">All that remains is to enter the data!</string>
    <string name="Container">Container (l)</string>
    <string name="Calculate">Calculate</string>
    <string name="Base">Base</string>
    <string name="Base_C">Base C (Transparent)</string>
    <string name="Colorants">Colorants</string>
    <string name="Code">Code</string>
    <string name="Values_1L">Values (1L)</string>
    <string name="Result">Result</string>
    <string name="default_value_size" translatable="false">10</string>
    <string name="liters">L</string>
    <string name="formula_calculation">Formula calculation</string>
    <string name="paint_icon">The paint jar icon</string>
    <string name="hide_points">Hide/show points</string>
    <string name="menu">Menu</string>
    <string name="history">History</string>
    <string name="open_db">Open database</string>
    <string name="often_used">Frequently used</string>
    <string name="other">Other</string>
    <string name="log" translatable="false">Log</string>
    <string name="clear_db">Clearing the database</string>
    <string name="clean_frequently_products">Clean frequently used products</string>
    <string name="clean_frequently_colors">Clean frequently used colors</string>
    <string name="set_number_frequently">Set the number of frequently used</string>
    <string name="list_liters">Change the list of liters</string>
    <string name="change_dinamic_color">Changing dynamic colors</string>
    <string name="dymanic_colors_description">Allows you to change the dynamic application colors during calculations</string>
    <string name="set_length_history">Set the length of the history</string>
    <string name="set_step_liters">Change liter step size</string>
    <string name="Cancel">Cancel</string>
    <string name="no_data_available" translatable="false">No data available</string>
    <string name="base_not_available" translatable="false">Base not available</string>
    <string name="imput_liters_hit">For example: 0.7</string>
    <string name="edit">Edit</string>
    <string name="add_volume">Add volume</string>
    <string name="ok" translatable="false">OK</string>
    <string name="Delete">Delete</string>
    <string name="Volume_editor">Volume Editor</string>
    <string name="Add">Add</string>
    <string name="set_history_limit">Set a history limit</string>
    <string name="change_history_description">ATTENTION: If you reduce the size of the history, the changes will take effect only after clearing the history.</string>
    <string name="change_frequently_description">ATTENTION: If you reduce the size of the Frequently used field, the changes will take effect only after deleting the frequently used field.</string>
    <string name="clear_history">Clearing the history</string>
    <string name="history_cleared">History cleared</string>
    <string name="undo">Undo</string>
    <string name="frequently_used_products_removed">Frequently used products have been removed</string>
    <string name="frequently_used_colors_removed">Frequently used colors have been removed</string>
    <string name="db_cleared">The database has been cleared</string>
    <string name="db_restored">The base has been restored</string>
    <string name="Database">Database</string>
    <string name="HistoryAndCleanup">History and Cleanup</string>
    <string name="error_not_found">The formula for the selected color was not found</string>
    <string name="import_verification_failed">Import verification failed</string>
    <string name="import_verification_progress">Verification...</string>
    <string name="select_product_color">Choose a product and a color</string>
    <string name="select_size">Select the volume</string>
    <string name="fill_all_fields">Fill in all the fields</string>
    <string name="search_desc">Search</string>
    <string name="split_view_desc">Menu</string>
    <string name="save_desc">Save</string>
    <string name="back_button_desc">Back Button</string>
    <string name="menu_desc">Menu</string>
    <string name="key">key</string>
    <string name="value">value</string>
    <string name="tap_the_item_to_edit">Tap the item to edit</string>
    <string name="done">done</string>
    <string name="search_button">Search Button</string>
    <string name="file_image">File image</string>
    <string name="filter_button">Filter button</string>
    <string name="no_color_data_available">No color data available</string>
    <string name="alternative_design">Alternative Design</string>
    <string name="points_hidden">The dots are hidden!</string>


    <string-array name="Themes">
        <item>System theme</item>
        <item>Light</item>
        <item>Dark</item>
    </string-array>
</resources>