<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <group android:checkableBehavior="none">
        <item
            android:id="@+id/nav_history"
            android:icon="@drawable/history_24px"
            android:title="@string/history" />

        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/settings_24px"
            android:title="@string/settings" />

        <item
            android:id="@+id/nav_about"
            android:icon="@drawable/info_24px"
            android:title="@string/about" />

        <item
            android:id="@+id/nav_log"
            android:icon="@drawable/frame_bug_24px"
            android:title="@string/log" />
    </group>
</menu>